devops/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - 
    http:
      paths:
      - pathType: Prefix
        path: /student
        backend:
          service:
           name: student-service
           port: 
            number: 7000 
      - pathType: Prefix
        path: /rating
        backend:
          service:
            name: rating-service
            port: 
             number: 5000
